--- a/index.html
+++ b/index.html
@@ -58,7 +58,28 @@
         </div>
 
         <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--MODAL FOR TASK SECTION-->
+  <div class="modal fade" id="containerSectionModal" tabindex="-1" aria-labelledby="addNewModal1" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Task Title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <img src="https://placehold.co/600x400" class="img-fluid mb-3" alt="...">
+          <h3 class="mb-3">Task Title</h3>
+          <p class="mb-3">This contains the description for your task</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
@@ -104,14 +125,16 @@
 
     <!-- Card section-->
     <section class="mt-5">
-      <div class="row task__container">
+      <div class="row task__container d-block">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://placehold.co/400" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+              <button type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#containerSectionModal">
+                View Task
+              </button>
           </div>
         </div>
       </div>
